--- a/lessonbuilder/tool/src/webapp/templates/ShowItem.html
+++ b/lessonbuilder/tool/src/webapp/templates/ShowItem.html
@@ -183,6 +183,9 @@ function toggleShortUrlOutput(defaultUrl, checkbox, textbox) {
 			frameborder="0"
 			marginwidth="0"
 			marginheight="0"
+			allowfullscreen="true"
+			webkitallowfullscreen="true"
+			mozallowfullscreen="true"
 			scrolling="auto">
 		</iframe>
 		<script>
