--- a/lessonbuilder/tool/src/webapp/templates/ShowPage.html
+++ b/lessonbuilder/tool/src/webapp/templates/ShowPage.html
@@ -445,6 +445,9 @@
                            height="300"
                            marginheight="0"
                            scrolling="auto"
+                           allowfullscreen="true"
+                           webkitallowfullscreen="true"
+                           mozallowfullscreen="true"
                            rsf:id="blti-iframe"
                                id="blti-iframe"
                            >
@@ -547,6 +550,9 @@
                          width="100%"
                          marginheight="0"
                          scrolling="auto"
+                         allowfullscreen="true"
+                         webkitallowfullscreen="true"
+                         mozallowfullscreen="true"
                          rsf:id="iframe"
                              id="iframe"
                          ></iframe>
@@ -585,7 +591,11 @@
                     <div rsf:id="youtubeSpan"  id="youtubeSpan"  class="hideOnDialog right-col"><div>
                         <div rsf:id="item-group-titles4" class="item-group-titles"></div>
                         
-                        <iframe rsf:id="youtubeIFrame" frameborder="0" allowfullscreen="allowfullscreen" class="playerwidth"></iframe>
+                        <iframe rsf:id="youtubeIFrame" frameborder="0"
+                            allowfullscreen="allowfullscreen"
+                            webkitallowfullscreen="true"
+                            mozallowfullscreen="true"
+                            class="playerwidth"></iframe>
 			<div rsf:id="youtube-td" role="toolbar" class="edit-col"><div><a role="button" aria-haspopup="dialog" aria-controls="youtube-dialog" href="#" class="usebutton edit-youtube" onclick="return false" rsf:id="youtube-edit"><span aria-hidden="true" class="fa-edit fa-edit-icon"></span></a><a role="button" href="#" class="usebutton del-item-link" onclick="return false"><span aria-hidden="true" class="fa-trash-o fa-edit-icon"></span></a><a role="button" aria-haspopup="dialog" aria-controls="youtube-dialog" href="#" class="usebutton add-link" onclick="return false"><span aria-hidden="true" class="fa-plus fa-edit-icon plus-edit-icon"></span></a></div></div>
                       </div>
                       <div style="display:none" rsf:id="youtubeId" class="youtube-id"></div>
@@ -932,6 +942,9 @@
 		   height="500"
 		   marginheight="0"
 		   scrolling="auto"
+		   allowfullscreen="true"
+		   webkitallowfullscreen="true"
+		   mozallowfullscreen="true"
 		   id="iframe"
 		   ></iframe>
 		   <ul class="navIntraTool">
