--- a/assignment/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_instructor_reorder_assignment.vm
+++ b/assignment/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_instructor_reorder_assignment.vm
@@ -96,7 +96,7 @@
 					<input type="text" size="3" value="$count" id="index$count"/>
 					<input type="hidden"  size="3" id="holder$count"  value="$count" tabindex="-2"/>
 				</span>
-				<span class="title col-md-6 col-sm-6 col-xs-12">
+				<span class="title col-md-6 col-sm-6 col-xs-12" title="$validator.escapeHtml($!assignment.getTitle())">
 					#if ($!assignment.draft)
 						<em class="highlight" style="font-style:normal">$tlang.getString("gen.dra2")</em>
 					#end
