SAK-32702: add ability to control more UI strings inside the permissions widget

--- a/authz/authz-tool/tool/src/webapp/vm/helper/chef_permissions-Main.vm
+++ b/authz/authz-tool/tool/src/webapp/vm/helper/chef_permissions-Main.vm
@@ -8,7 +8,7 @@
 #end
 
 	<h3>
-		$thelp.getString("per.lis.title")
+		$pageHeader
 	</h3>
 		<div class="alertMessage">
 			$thelp.getString("gen.alert")
