--- a/site-manage/site-manage-tool/tool/src/webapp/css/site-manage.css
+++ b/site-manage/site-manage-tool/tool/src/webapp/css/site-manage.css
@@ -632,7 +632,8 @@ td.grayText {
 }
 /* end SAK-32087 */
 
-#toolHolderWW .mathJaxToggleArea {
+#toolHolderWW .mathJaxToggleArea,
+#toolHolderWW .lessonsSubNavToggleArea {
     border: 1px solid #DDDDDD;
     border-radius: 5px;
     padding: 10px;
