--- a/portal/portal-render-engine-impl/impl/src/webapp/vm/morpheus/includeStandardHead.vm
+++ b/portal/portal-render-engine-impl/impl/src/webapp/vm/morpheus/includeStandardHead.vm
@@ -47,7 +47,7 @@
                 "siteId": "$!{siteId}",
                 "siteTitle": "$!{siteTitle}",
                 "shortDescription" : "$!{shortDescription}",
-                "toolsCollapsed": ${toolsCollapsed},
+                "toolsCollapsed": #if ($toolsCollapsed) true #else false #end,
                 "locale": "$!{locale}",
                 "user": {
                     "id": "$!{userId}",
