--- a/content/content-tool/tool/src/webapp/vm/content/chef_resources_reorder.vm
+++ b/content/content-tool/tool/src/webapp/vm/content/chef_resources_reorder.vm
@@ -1,8 +1,6 @@
 ## version: $Id:  $
 <!-- chef_resources_reorder.vm, use with org.sakaiproject.tool.content.ResourcesAction.java -->
 <!-- this is the reorder template -->
-#javascript("/library/js/fluid/1.5/MyInfusion.js")
-#javascript("/library/js/reorderer.js")
 
 <div class="portletBody specialLink">
 	<form name="reorderForm" id="reorderForm" action="#toolForm("ResourcesAction")" method="post">
@@ -52,7 +50,7 @@
 				#set($collectionMembers = $root.members)
 				#set($count = 1)
 				#foreach($member in $collectionMembers)
-					<li class="sortable row well"  id="listitem.orderable$count">
+					<li class="sortable row well" tabindex="0" id="listitem.orderable$count">
 						<span style="display:none" class="grabHandle">
 							<input type="text" size="3" value="$count" id="index$count"/>
 							<input type="hidden"  size="3" id="holder$count"  value="$count" tabindex="-2"/>
