--- a/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/component/GbGradeTable.html
+++ b/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/component/GbGradeTable.html
@@ -13,19 +13,23 @@
                 <div class="gb-grade-item-flags">
                     {if settings.isCourseGradeReleased}
                     <span class="gb-flag-released" wicket:message="title:label.coursegrade.released">
-                        <span aria-hidden="true" style="display:none;" class="gb-tooltip-extras">
-                            <div>
-                                <a href="javascript:void(0);" class="gb-gradebook-settings"><wicket:message key="label.coursegrade.editsettings"/></a>
-                            </div>
-                        </span>
+                        {if settings.instructor}
+                            <span aria-hidden="true" style="display:none;" class="gb-tooltip-extras">
+                                <div>
+                                    <a href="javascript:void(0);" class="gb-gradebook-settings"><wicket:message key="label.coursegrade.editsettings"/></a>
+                                </div>
+                            </span>
+                        {/if}
                     </span>
                     {else}
                     <span class="gb-flag-not-released" wicket:message="title:label.coursegrade.notreleased">
-                        <span aria-hidden="true" style="display:none;" class="gb-tooltip-extras">
-                            <div>
-                                <a href="javascript:void(0);" class="gb-gradebook-settings"><wicket:message key="label.coursegrade.editsettings"/></a>
-                            </div>
-                        </span>
+                        {if settings.instructor}
+                            <span aria-hidden="true" style="display:none;" class="gb-tooltip-extras">
+                                <div>
+                                    <a href="javascript:void(0);" class="gb-gradebook-settings"><wicket:message key="label.coursegrade.editsettings"/></a>
+                                </div>
+                            </span>
+                        {/if}
                     </span>
                     {/if}
                 </div>
